# ci-cd-projeto

./: jogo.py  pyproject.toml
.github/workflows/: ci-cd.yml
tests/: teste_jogo.py
